--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/node-fetch": "^2.6.1",
     "form-data": "^4.0.0",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.4"
   }
 }
