--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "discord-rest",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A discord Rest Manager(API only)",
-  "main": "index.js",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "test": "echo All right everything is fine"
   },
