--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-rest",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A discord Rest Manager(API only)",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node-fetch": "^2.6.1",
+    "discord-api-types": "^0.33.0",
     "form-data": "^4.0.0",
     "node-fetch": "^2.6.7"
   },
