--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "discord-rest",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "A discord Rest Manager(API only)",
     "main": "src/index.js",
     "types": "src/index.d.ts",
@@ -8,21 +8,21 @@
         "test": "echo All right everything is fine"
     },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/garder500/discord-rest.git"
+        "type": "git",
+        "url": "https://github.com/garder500/discord-rest.git"
     },
     "keywords": [
-      "discord",
-      "api",
-      "bot",
-      "client",
-      "node",
-      "discordapp"
+        "discord",
+        "api",
+        "bot",
+        "client",
+        "node",
+        "discordapp"
     ],
     "bugs": {
-      "url": "https://github.com/garder500/discord-rest/issues"
+        "url": "https://github.com/garder500/discord-rest/issues"
     },
-    "homepage": "https://github.com/garder500/discord-rest",
+    "homepage": "https://disco-rest.js.org",
     "author": "garder500 <jeremy27.clara22@gmail.com>",
     "license": "MIT",
     "dependencies": {
@@ -32,6 +32,7 @@
     "devDependencies": {
         "@types/node-fetch": "^2.6.1",
         "discord-api-types": "^0.33.0",
+        "typedoc": "^0.22.15",
         "typescript": "^4.6.4"
     }
 }
