--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,12 +20,12 @@ jobs:
       run: npm run lint
   
   build:
-    name: Building typescript project to test
+    name: Building project in different node version
     runs-on: ubuntu-latest
     needs: [ linter ]
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x,15.x,16.x,17.x,18.x]
     steps:
     - name: Get files
       uses: actions/checkout@v2
@@ -37,3 +37,21 @@ jobs:
       run: npm ci
     - name: Build TSC
       run: tsc --build
+
+    buildForV17:
+      name: Building project in V17
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [17.x]
+      steps:
+      - name: Get files
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install packages
+        run: npm ci
+      - name: Build TSC
+        run: tsc --build
