--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,7 +25,7 @@ jobs:
     needs: [ linter ]
     strategy:
       matrix:
-        node-version: [14.x,15.x,16.x,17.x,18.x]
+        node-version: [14.x,15.x,16.x,17.x]
     steps:
     - name: Get files
       uses: actions/checkout@v2
