--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,12 +40,9 @@ jobs:
           rm -rf lib
           BOOL = node -p "require('./package.json').version.includes('dev')"
           if [ $BOOL = true ]; then
-            npm deprecate discord-rest@"$(node -p "require('./package.json').version")"
-            npm run increment
-            git add package.json
-            git commit -m "chore: release"
-            git push
-            sleep 2
+            # Get last dev version
+            VERSION=$(npm view discord-rest@dev version)
+            npm deprecate discord-rest@"$VERSION"
             npm publish --tag dev
           else
             npm run increment
