--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,13 +43,13 @@ jobs:
             # Get last dev version
             VERSION=$(npm view discord-rest@dev version)
             npm deprecate discord-rest@"$VERSION" "This version is deprecated move to the latest stable version"
+            npm run increment
             npm publish --tag dev
           else
             npm run increment
             git add package.json
             git commit -m "chore: release"
             git push
-            sleep 2
             npm publish --access public --tag latest
           fi
         env:
