--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,6 +43,7 @@ jobs:
             # Get last dev version
             VERSION=$(npm view discord-rest@dev version)
             npm deprecate discord-rest@"$VERSION" "This version is deprecated move to the latest stable version"
+            npm run increment
             npm publish --tag dev
           else
             npm run increment
